--- a/sqm.sty
+++ b/sqm.sty
@@ -32,14 +32,14 @@
 \RequirePackage[nocn,novert]{ffcode}
 \RequirePackage{to-be-determined}
 \RequirePackage{tikz}
-  \usetikzlibrary{positioning,calc,arrows.meta}
+  \usetikzlibrary{positioning,calc,arrows,arrows.meta}
 \RequirePackage{soul}
 \renewcommand\emph[1]{\ul{#1}}
 \tikzstyle{graph} = [
   node distance=0,
-  every node/.style={draw=black,circle,minimum width=2.2em,thick},
-  every edge/.append style={draw=black,thick,-{Latex[length=2.5mm,width=2mm]},every node/.style={above}},
-  every loop/.append style={draw=black,thick,-{Latex[length=2.5mm,width=2mm]},every node/.style={above}},
+  every node/.style={draw=black,circle,minimum width=2.2em,line width=.08em,outer sep=.2em,font={\ttfamily}},
+  every edge/.append style={draw=black,line width=.08em,-{Latex[length=2.5mm,width=2mm]},every node/.style={above}},
+  every loop/.append style={draw=black,line width=.08em,-{Latex[length=2.5mm,width=2mm]},every node/.style={above}},
 ]
 
 \newcommand\sqmDisclaimer{{%
