--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -110,6 +110,9 @@ void main(Shape s)
     ACM Transactions on Software Engineering and Methodology (TOSEM), vol.~15, no.~2, 2006\par
   \textit{Agile Software Development, Principles, Patterns, and Practices},
     Robert C. Martin, 2002\par
+  \href{https://www.yegor256.com/2016/04/26/why-inputstream-design-is-wrong.html}{Why InputStream Design Is Wrong} (2016)\par
+  \href{https://www.yegor256.com/2020/02/19/fat-skinny-design.html}{Fat vs. Skinny Design} (2020)\par
+  \href{https://www.yegor256.com/2018/09/18/fear-of-coupling.html}{Fear of Decoupling} (2018)\par
 }
 
 \end{document}
