--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -22,21 +22,17 @@
 
 \documentclass{article}
 \usepackage{../sqm}
-\usepackage{amsmath}
-\usepackage{relsize}
-\newcommand*\thetitle{MMAC}
+\newcommand*\thetitle{Neural Metrics}
 \begin{document}
 
-\plush{\sqmTitlePage{10}}
+\plush{\sqmTitlePage{99}}
 
-\pitch{\pptQuote{lionel-briand.jpg}{We introduce a new model to predict the relationship between parameter types and attribute types. The cohesion caused by one type of interactions is referred to as Method–Method through Attributes Cohesion (MMAC).}{\textit{An Object-Oriented High-Level Design-Based Class Cohesion Metric}, Jehad Al Dallal and \emph{Lionel C. Briand}, Information and Software Technology, vol.~52, no.~12, 2010}}
+% https://www.mdpi.com/2076-3417/13/6/3722
+
+\pitch{\pptQuote{michael-pradel.jpg}{Neural software analysis offers a fresh approach, enhancing or even surpassing traditional program analysis in some areas}{Michael Pradel and Satish Chandra \newline \emph{Neural Software Analysis}, \newline Communications of the ACM 65(1), 2022}}
 
 \plush{
   \pptBanner{Read this:}\par
-  \small
-  \textit{An Object-Oriented High-Level Design-Based Class Cohesion Metric},
-    Jehad Al Dallal and Lionel C. Briand,
-    Information and Software Technology, vol.~52, no.~12, 2010\par
 }
 
 \end{document}
