--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -89,9 +89,9 @@
     \item Coupling
     \item LCOM 1, 2, 3, 4, 5
     \item TCC and LCC
-    \item PCC
-    \item MMAC and NHD
-    \item DSQI
+    \item CAMC and NHD
+
+    \item Object dimensions
 
     \item Hits of Code (Code Churn)
     \item GitHub stars
@@ -99,6 +99,8 @@
     \item Forks and pull requests
     \item Bugs
     \item Build time
+
+    % volatility
 
     \item Test Coverage
     \item Mutation Coverage
