--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -231,7 +231,7 @@ class Book
 
 \pitch{\pptQuote{mark-lorenz.jpg}{Number of Messages (NOM) measures the number of messages sent in a method, segregated by type of message.}{\textit{Object-Oriented Software Metrics: a Practical Guide}, \emph{Mark Lorenz} and Jeff Kidd, Prentice-Hall, Inc., 1994}}
 
-\pptBanner{Response For a Class (RFC)}
+\pptBanner{Number of Messages (NOM)}
 \begin{multicols}{2}
 {\small\begin{ffcode}
 class Trim
