--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -253,6 +253,16 @@ class Book
 \plush{}
 
 \plush{
+  \pptBanner{Typical Mistakes in Research Papers}
+  \begin{enumerate}
+    \item Assuming the reader understands the \emph{context}
+    \item Trying to find \emph{impact} instead of \emph{correlation}
+    \item Ignoring the importance of \emph{taxonomy} in Related Work
+    \item Writing in \emph{future tense}
+  \end{enumerate}
+}
+
+\plush{
   \pptBanner{Read this:}\par
   \small
   \textit{Evaluating the Impact of Object-Oriented Design on Software Quality},
