--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -90,22 +90,22 @@
     \item LCOM 1, 2, 3, 4, 5
     \item TCC and LCC
     \item CAMC and NHD
-
     \item Object dimensions
+
+    \item Code duplication
+    % \item Volatility
+
+    \item Test Coverage
+    \item Mutation Coverage
+    \item Build Time \& Stability
+
+    \item Algorithmic complexity Big-O
 
     \item Hits of Code (Code Churn)
     \item GitHub stars
     \item Repository size
     \item Forks and pull requests
     \item Bugs
-    \item Build time
-
-    % volatility
-
-    \item Test Coverage
-    \item Mutation Coverage
-    \item Code duplication
-    \item Algorithmic complexity Big-O
 
     \item Instruction path length
     \item Function Points
