--- a/11-code-duplication/11-code-duplication.tex
+++ b/11-code-duplication/11-code-duplication.tex
@@ -29,7 +29,11 @@
 
 \plush{\sqmTitlePage{11}}
 
-\pptBanner{Motivating Example}
+\pitch{\pptQuote{qurat-ul-ain.jpg}{If a bug is identified in one segment of code, all the similar segments need to be checked for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}{\textit{A Systematic Review on Code Clone Detection}, \emph{Qurat Ul Ain}, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
+
+\pitch{\pptQuote{rainer-koschke.jpg}{The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \emph{multiple times}, too. Yet, it is usually not documented \emph{where} code was copied.}{\textit{Comparison and Evaluation of Clone Detection Tools}, Stefan Bellon, \emph{Rainer Koschke}, Giuliano Antoniol, Jens Krinke, Ettore Merlo, IEEE Transactions on Software Engineering, 2007}}
+
+\pptBanner{Motivating Example (part I)}
 \begin{multicols}{2}
 Before (\textcolor{red}{wrong}):\par
 {\small\begin{ffcode}
@@ -39,11 +43,42 @@ printf("Hi, %s!", getName(55));
 \end{ffcode}
 }
 \par\columnbreak\par
-After (\textcolor{green}{right}):\par
+After (\textcolor{orange}{better}):\par
 {\small\begin{ffcode}
 sayHello(42);
 sayHello(7);
-sayHello(556);
+sayHello(55);
+
+void sayHello(int id) {
+  var n = getName(id);
+  printf("Hi, %s!", n);
+}
+\end{ffcode}
+}
+\end{multicols}
+\plush{}
+
+\pptBanner{Motivating Example (part II)}
+\begin{multicols}{2}
+Before (\textcolor{orange}{still not ideal}):\par
+{\small\begin{ffcode}
+sayHello(42);
+sayHello(7);
+sayHello(55);
+
+void sayHello(int id) {
+  var n = getName(id);
+  printf("Hi, %s!", n);
+}
+\end{ffcode}
+}
+\par\columnbreak\par
+After (\textcolor{green}{perfect}):\par
+{\small\begin{ffcode}
+var users = [42, 7, 55];
+for (id : users) {
+  sayHello(id);
+}
 
 void sayHello(int id) {
   var n = getName(id);
@@ -73,11 +108,93 @@ duplicated.
 
 \pitch{\pptBanner{The Rule of Three}\pptQuote{kent-beck.jpg}{The \emph{first} time you do something, you just do it. The \emph{second} time you do something similar, you wince at the duplication, but you do the duplicate thing anyway. The \emph{third} time you do something similar, you refactor.}{\textit{Refactoring}, Martin Fowler and \emph{Kent Beck}, Addison-Wesley, 1999}}
 
+\pitch{\pptQuote{wasi-haider-butt.jpg}{We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}{\textit{A Systematic Review on Code Clone Detection}, Ain, Qurat Ul, \emph{Wasi Haider Butt}, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
+
+\pptBanner{Type-1: Exact Clone}
+\begin{multicols}{2}
+Original:\par
+{\small\begin{ffcode}
+printf("Hi, %s\n", name(42));
+\end{ffcode}
+}
+Clone:\par
+{\small\begin{ffcode}
+// Here we print a message
+// to the console for a user
+printf(
+  "Hi, %s\n",
+  name(42)
+);
+\end{ffcode}
+}
+\par\columnbreak\par
+Identical code segments except for changes in comments, layouts and whitespaces.
+\end{multicols}
+\plush{}
+
+\pptBanner{Type-2: Parameterized Clone}
+\begin{multicols}{2}
+Original:\par
+{\small\begin{ffcode}
+var n = name(42);
+printf("Hi, %s\n", n);
+\end{ffcode}
+}
+Clone:\par
+{\small\begin{ffcode}
+String name = name(42);
+printf("Hi, %s\n", name);
+\end{ffcode}
+}
+\par\columnbreak\par
+Code segments which are syntactically or structurally similar other than changes in comments, identifiers, types, literals, and layouts.
+\end{multicols}
+\plush{}
+
+\pptBanner{Type-3: Gapped Clone}
+\begin{multicols}{2}
+Original:\par
+{\small\begin{ffcode}
+printf("Hi, %s\n", name(42));
+\end{ffcode}
+}
+Clone:\par
+{\small\begin{ffcode}
+var msg = "Hi, %s\n";
+var n = name(42);
+printf(msg, n);
+\end{ffcode}
+}
+\par\columnbreak\par
+Copied pieces with further modification such as addition or removal of statements and changes in whitespaces, identifiers, layouts, comments, and types but outcomes are similar.
+\end{multicols}
+\plush{}
+
+\pptBanner{Type-4: Semantic Clone}
+\begin{multicols}{2}
+Original:\par
+{\small\begin{ffcode}
+printf("Hi, %s\n", name(42));
+\end{ffcode}
+}
+Clone:\par
+{\small\begin{ffcode}
+var s = sprintf(
+  "Hi, %s\n",
+  name(42));
+print(s);
+\end{ffcode}
+}
+\par\columnbreak\par
+More than one code segments that are functionally similar but implemented by different syntactic variants.
+\end{multicols}
+\plush{}
 
 \plush{
   \pptBanner{These tools can help detecting duplicate code:}
   \begin{enumerate}
-    \item ...
+    \item IntelliJ IDEA by JetBrains
+    \item Copy/Paste Detector (\href{https://pmd.sourceforge.io/pmd-5.5.2/usage/cpd-usage.html}{CPD}) by PMD for Java
   \end{enumerate}
 }
 
@@ -87,12 +204,18 @@ duplicated.
   \textit{A Program for Identifying Duplicated Code},
     Brenda S. Baker,
     Computing Science and Statistics, 1993\par
-  \textit{The Pragmatic Programmer: From Journeyman to Master},
-     Andrew Hunt and David Thomas,
-     Addison-Wesley, 1999
+  \textit{A Systematic Review on Code Clone Detection},
+    Qurat Ul Ain, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool,
+    IEEE Access, 2019 \par
+  \textit{A Systematic Review on Code Clone Detection},
+    Qurat Ul Ain, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool,
+    IEEE Access, 2019 \par
+  \textit{Comparison and Evaluation of Clone Detection Tools},
+     Stefan Bellon, Rainer Koschke, Giuliano Antoniol, Jens Krinke, Ettore Merlo,
+     IEEE Transactions on Software Engineering, 2007 \par
   \textit{Refactoring},
      Martin Fowler and Kent Beck,
-     Addison-Wesley, 1999
+     Addison-Wesley, 1999 \par
 }
 
 \end{document}
