--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -92,7 +92,7 @@
     \item CAMC and NHD
     \item Object dimensions
 
-    \item Code duplication
+    \item Code coverage
     % \item Volatility
 
     \item Test Coverage
