--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -29,6 +29,8 @@
 
 \plush{\sqmTitlePage{11}}
 
+\pitch{\pptQuote{../09-CAMC-and-NHD/robert-martin.jpg}{Duplication is the \emph{primary enemy} of a well-designed system.}{\textit{Clean Code: A Handbook of Agile Software Craftsmanship}, Robert C. Martin, Pearson, 2008}}
+
 \pitch{\pptQuote{qurat-ul-ain.jpg}{If a bug is identified in one segment of code, all the similar segments need to be \emph{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}{\textit{A Systematic Review on Code Clone Detection}, \emph{Qurat Ul Ain}, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
 
 \pitch{\pptQuote{rainer-koschke.jpg}{The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \emph{multiple times}, too. Yet, it is usually not documented \emph{where} code was copied.}{\textit{Comparison and Evaluation of Clone Detection Tools}, Stefan Bellon, \emph{Rainer Koschke}, Giuliano Antoniol, Jens Krinke, Ettore Merlo, IEEE Transactions on Software Engineering, 2007}}
