--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -92,8 +92,8 @@
     \item CAMC and NHD
     \item Object dimensions
 
-    \item Code coverage
-    % \item Volatility
+    \item Clone coverage
+    \item Source code volatility
 
     \item Test Coverage
     \item Mutation Coverage
