--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -90,11 +90,11 @@
     \item LCOM 1, 2, 3, 4, 5
     \item TCC and LCC
     \item CAMC and NHD
-    \item Object dimensions
+    \item Object Dimensions
 
-    \item Clone coverage
-    \item Source code volatility
-
+    \item Clone Coverage
+    \item Dead Code
+{\color{gray}
     \item Test Coverage
     \item Mutation Coverage
     \item Build Time \& Stability
@@ -111,7 +111,7 @@
     \item Function Points
     \item Number of methods, classes, etc.
 
-    \item Neural Metrics
+    \item Neural Metrics}
 \end{enumerate}
 
 Порядок лекций может меняться, а тематика корректироваться в зависимости от интереса аудитории.
