--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -94,6 +94,8 @@
 
     \item Clone Coverage
     \item Dead Code
+    \item Code Churn
+
 {\color{gray}
     \item Test Coverage
     \item Mutation Coverage
@@ -101,7 +103,6 @@
 
     \item Algorithmic complexity Big-O
 
-    \item Hits of Code (Code Churn)
     \item GitHub stars
     \item Repository size
     \item Forks and pull requests
