--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -97,8 +97,8 @@
     \item Code Churn
 
 {\color{gray}
-    \item Test Coverage
-    \item Mutation Coverage
+    % \item Test Coverage
+    % \item Mutation Coverage
     \item Build Time \& Stability
 
     \item Algorithmic complexity Big-O
