--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -27,9 +27,9 @@
 
 \plush{\sqmTitlePage{13}}
 
-\pitch{\pptBanner{History of Version Control Systems}
+\pitch{\pptBanner{History of Version Control Systems (VCS)}
 \begin{itemize}\setlength\itemsep{0pt}
-  \item The Librarian by ADR: 1969
+  \item The Librarian by ADR: created in 1969
   \item Panvalet by Computer Associates: 1969
   \item SCCS by Bell Labs: 1973
   \item RCS by GNU: 1982
