--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -41,6 +41,8 @@
   {1,2,3 модули 2023/2024}
 \head{Язык}
   {Русский}
+\head{Видео}
+  {\href{https://www.youtube.com/playlist?list=PLaIsQH4uc08xyXRhhYPHh-Yam2kEwNaLl}{YouTube}}
 \head{Охват аудитории}
   {Для всего кампуса}
 \head{Объем дисциплины}
