--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -43,6 +43,8 @@
   {Русский}
 \head{Видео}
   {\href{https://www.youtube.com/playlist?list=PLaIsQH4uc08xyXRhhYPHh-Yam2kEwNaLl}{YouTube}}
+\head{Слайды}
+  {\href{https://github.com/yegor256/sqm}{GitHub}}
 \head{Охват аудитории}
   {Для всего кампуса}
 \head{Объем дисциплины}
