--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -118,11 +118,22 @@ assert fibonacci(10) == 55;
 {\small Source: \url{https://www.0pdd.com/p?name=objectionary/eo}\par}}
 
 \plush{
+\pptBanner{Sample Ticket Submitted by 0pdd.com to \texttt{objectionary/eo}}
+\includegraphics[width=.6\textwidth]{ticket.png}\par
+{\small Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
+
+\pitch{\pptQuote{giancarlo-succi.jpg}{This paper presents the benefits of considering the entire backlog when prioritizing tasks. We employ an iterative approach using Particle Swarm Optimization to optimize a linear model with various preprocessing methods to determine the optimal model
+for task prioritization within a backlog.}{Yegor Bugayenko, Mirko Farina, Artem Kruglov, Witold Pedrycz, Yaroslav Plaksin, \emph{Giancarlo Succi}, \textit{Automatically Prioritizing Tasks in Software Development}, IEEE Access, Vol.~11, 2023}}
+
+\plush{
   \pptBanner{Read this:}\par
   \small
   \textit{Automatically Prioritizing and Assigning Tasks from Code Repositories in Puzzle Driven Development},
     Yegor Bugayenko, Ayomide Bakare, Arina Cheverda, Mirko Farina, Artem Kruglov, Yaroslav Plaksin, Giancarlo Succi, and Witold Pedrycz,
     Proceedings of the International Mining Software Repositories (MSR), 2022\par
+  \textit{Automatically Prioritizing Tasks in Software Development},
+    Yegor Bugayenko, Mirko Farina, Artem Kruglov, Witold Pedrycz, Yaroslav Plaksin, and Giancarlo Succi,
+    IEEE Access, Vol.~11, 2023 \par
   \href{https://www.yegor256.com/2010/03/04/pdd.html}{Puzzle Driven Development} (2010) \par
   \href{https://www.yegor256.com/2014/04/12/puzzle-driven-development-by-roles.html}{PDD by Roles} (2014) \par
   \href{https://www.yegor256.com/2017/04/05/pdd-in-action.html}{PDD in Action} (2017) \par
