--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -99,19 +99,21 @@
     \item Clone Coverage
     \item Dead Code
     \item Code Churn
+    \item Tech Debt
+
+    \item Code Coverage
+    \item Mutation Coverage
 
 {\color{gray}
-    \item GitHub stars
-    \item Repository size
-    \item Forks and pull requests
     \item Bugs
+    \item Stars
+    \item Contributors
+    \item Forks and Pull Requests
 
     \item Instruction path length
     \item Function Points
     \item Number of methods, classes, etc.
 
-    % \item Test Coverage
-    % \item Mutation Coverage
     \item Build Time \& Stability
     \item Algorithmic complexity Big-O
 
