--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -90,6 +90,8 @@ assert fibonacci(10) == 55;
 \end{multicols}
 \plush{}
 
+\pitch{\pptQuote{william-elmendorf.jpg}{A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \emph{variations} eligible for testing; 3) rank and subset the \emph{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \emph{test coverage} of the test case library; and 5) verify attainment of the \emph{planned} test coverage.}{William Robert Elmendorf, \textit{Controlling the Functional Testing of an Operating System}, IEEE Transactions on Systems Science and Cybernetics, 5(4), 1969}}
+
 \pitch{\pptQuote{brian-marick.jpg}{Coverage numbers (like many numbers) are dangerous because they're \emph{objective} but \emph{incomplete}. They too often distort sensible action. Using them in isolation is as foolish as hiring based only on GPA.}{Brian Marick, \href{http://www.exampler.com/testing-com/writings/coverage.pdf}{\textit{How to Misuse Code Coverage}}, 1997}}
 
 \pitch{\pptQuote{../06-coupling/martin-fowler.jpg}{I would be suspicious of anything like 100\% --- it would smell of someone writing tests to make the coverage \emph{numbers happy}, but not thinking about what they are doing.}{Martin Fowler, \href{https://martinfowler.com/bliki/TestCoverage.html}{\textit{Test Coverage}}, 1997}}
