--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -96,6 +96,10 @@ assert fibonacci(10) == 55;
 
 \pitch{\pptQuote{../06-coupling/martin-fowler.jpg}{I would be suspicious of anything like 100\% --- it would smell of someone writing tests to make the coverage \emph{numbers happy}, but not thinking about what they are doing.}{Martin Fowler, \href{https://martinfowler.com/bliki/TestCoverage.html}{\textit{Test Coverage}}, 1997}}
 
+\pitch{\pptQuote{goran-petrovic.jpg}{Google \emph{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \emph{five levels} of code coverage thresholds.}{\textit{Code Coverage at Google}, \emph{Goran Petrovi{\'c}}, Marko Ivankovi{\'c}, Ren{\'e} Just, Gordon Fraser, Proceedings of the 27th Joint Meeting on ESEC/FSE, 2019}}
+
+\pitch{\pptBanner{Code Coverage Threshold Levels in Google}\includegraphics[width=.7\textwidth]{levels.png}}
+
 \pitch{\pptBanner{Codecov.io}\includegraphics[width=.7\textwidth]{codecov.png}}
 
 \pitch{\pptBanner{Line Coverage}\includegraphics[width=.7\textwidth]{lines.png}}
