--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -27,12 +27,6 @@
 
 \plush{\sqmTitlePage{15}}
 
-% Statement
-% Branch/Decision
-% Modified Condition/Decision Coverage (MC/DC)
-% LCSAJ (Linear Code Sequence and Jump)
-
-
 \pptBanner{Example, Part I}
 \begin{multicols}{2}
 Live Code:\par
@@ -90,6 +84,11 @@ assert fibonacci(10) == 55;
 \end{multicols}
 \plush{}
 
+% Statement
+% Branch/Decision
+% Modified Condition/Decision Coverage (MC/DC)
+% LCSAJ (Linear Code Sequence and Jump)
+
 \pitch{\pptQuote{william-elmendorf.jpg}{A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \emph{variations} eligible for testing; 3) rank and subset the \emph{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \emph{test coverage} of the test case library; and 5) verify attainment of the \emph{planned} test coverage.}{William Robert Elmendorf, \textit{Controlling the Functional Testing of an Operating System}, IEEE Transactions on Systems Science and Cybernetics, 5(4), 1969}}
 
 \pitch{\pptQuote{brian-marick.jpg}{Coverage numbers (like many numbers) are dangerous because they're \emph{objective} but \emph{incomplete}. They too often distort sensible action. Using them in isolation is as foolish as hiring based only on GPA.}{Brian Marick, \href{http://www.exampler.com/testing-com/writings/coverage.pdf}{\textit{How to Misuse Code Coverage}}, 1997}}
@@ -99,6 +98,8 @@ assert fibonacci(10) == 55;
 \pitch{\pptQuote{goran-petrovic.jpg}{Google \emph{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \emph{five levels} of code coverage thresholds.}{\textit{Code Coverage at Google}, \emph{Goran Petrovi{\'c}}, Marko Ivankovi{\'c}, Ren{\'e} Just, Gordon Fraser, Proceedings of the 27th Joint Meeting on ESEC/FSE, 2019}}
 
 \pitch{\pptBanner{Code Coverage Threshold Levels in Google}\includegraphics[width=.7\textwidth]{levels.png}}
+
+\pitch{\pptQuote{adam-bender.jpg}{Code coverage \emph{does not guarantee} that the covered lines or branches have been tested correctly, it just guarantees that they have been executed by a test. But a low code coverage number \emph{does guarantee} that large areas of the product are going completely untested by automation on every single deployment.}{\textit{Code Coverage Best Practices}, Carlos Arguelles, Marko Ivankovi{\'c}, \emph{Adam Bender}, \href{https://testing.googleblog.com/2020/08/code-coverage-best-practices.html}{Google Blog}, 2020}}
 
 \pitch{\pptBanner{Codecov.io}\includegraphics[width=.7\textwidth]{codecov.png}}
 
@@ -119,8 +120,9 @@ assert fibonacci(10) == 55;
 \plush{
   \pptBanner{Read this:}\par
   \small
-  \textit{},
-    \par
+  \textit{Code Coverage Best Practices},
+    Carlos Arguelles, Marko Ivankovi{\'c}, Adam Bender,
+    \href{https://testing.googleblog.com/2020/08/code-coverage-best-practices.html}{Google Blog}, 2020 \par
 }
 
 \end{document}
