--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -91,11 +91,13 @@ assert fibonacci(10) == 55;
 
 \pitch{\pptQuote{william-elmendorf.jpg}{A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \emph{variations} eligible for testing; 3) rank and subset the \emph{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \emph{test coverage} of the test case library; and 5) verify attainment of the \emph{planned} test coverage.}{William Robert Elmendorf, \textit{Controlling the Functional Testing of an Operating System}, IEEE Transactions on Systems Science and Cybernetics, 5(4), 1969}}
 
+\pitch{\pptQuote{boris-beizer.jpg}{Junky software takes more tests to achieve coverage, but it breaks under any systematic test.}{\textit{Black Box Testing}, Boris Beizer, 1995}}
+
 \pitch{\pptQuote{brian-marick.jpg}{Coverage numbers (like many numbers) are dangerous because they're \emph{objective} but \emph{incomplete}. They too often distort sensible action. Using them in isolation is as foolish as hiring based only on GPA.}{Brian Marick, \href{http://www.exampler.com/testing-com/writings/coverage.pdf}{\textit{How to Misuse Code Coverage}}, 1997}}
 
-\pitch{\pptQuote{pavneet-singh-kochhar.jpg}{Our results show that coverage has an \emph{insignificant correlation} with the number of bugs that are found after the release of the software at the project level, and no such correlation at the file level.}{\textit{Code Coverage and Postrelease Defects: A Large-Scale Study on Open Source Projects}, Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan, IEEE Transactions on Reliability, 66(4), 2017}}
-
 \pitch{\pptQuote{../06-coupling/martin-fowler.jpg}{I would be suspicious of anything like 100\% --- it would smell of someone writing tests to make the coverage \emph{numbers happy}, but not thinking about what they are doing.}{Martin Fowler, \href{https://martinfowler.com/bliki/TestCoverage.html}{\textit{Test Coverage}}, 1997}}
+
+\pitch{\pptQuote{pavneet-singh-kochhar.jpg}{Our results show that coverage has an \emph{insignificant correlation} with the number of bugs that are found after the release of the software at the project level, and \emph{no such correlation} at the file level.}{\textit{Code Coverage and Postrelease Defects: A Large-Scale Study on Open Source Projects}, Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan, IEEE Transactions on Reliability, 66(4), 2017}}
 
 \pitch{\pptQuote{goran-petrovic.jpg}{Google \emph{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \emph{five levels} of code coverage thresholds.}{\textit{Code Coverage at Google}, \emph{Goran Petrovi{\'c}}, Marko Ivankovi{\'c}, Ren{\'e} Just, Gordon Fraser, Proceedings of the 27th Joint Meeting on ESEC/FSE, 2019}}
 
@@ -125,6 +127,9 @@ assert fibonacci(10) == 55;
   \textit{Code Coverage Best Practices},
     Carlos Arguelles, Marko Ivankovi{\'c}, Adam Bender,
     \href{https://testing.googleblog.com/2020/08/code-coverage-best-practices.html}{Google Blog}, 2020 \par
+  \textit{Black Box Testing},
+    Boris Beizer,
+    John Wiley \& Sons, 1995 \par
 }
 
 \end{document}
